force-app/main/default/objects/Bus_Trip__c/Bus_Trip__c.object-meta.xml
<CustomObject>
    <label>Bus Trip</label>
    <nameField>
        <label>Bus Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>