force-app/main/default/objects/Bus_Trip__c/fields/From_location__c.field-meta.xml
<CustomField>
    <fullName>From_location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Bus Trips (From)</relationshipLabel>
    <relationshipName>From_location</relationshipName>
    <type>Lookup</type>
</CustomField>