force-app/main/default/objects/Bus_Trip__c/fields/Tickets_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Remaining__c</fullName>
    <label>Tickets Remaining</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>