force-app/main/default/objects/Bus_Trip__c/fields/To_location__c.field-meta.xml
<CustomField>
    <fullName>To_location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Bus Trips</relationshipLabel>
    <relationshipName>To_location</relationshipName>
    <type>Lookup</type>
</CustomField>