force-app/main/default/objects/Bus_Trip__c/fields/Trip_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Trip_Capacity__c</fullName>
    <formula>Bus__r.Total_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>