force-app/main/default/objects/Bus_Trip__c/fields/Trip_duration__c.field-meta.xml
<CustomField>
    <fullName>Trip_duration__c</fullName>
    <label>Trip duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>