force-app/main/default/objects/Bus_Trip__c/fields/Trip_timing__c.field-meta.xml
<CustomField>
    <fullName>Trip_timing__c</fullName>
    <label>Trip timing</label>
    <type>DateTime</type>
</CustomField>